[package]
name = "agbrs_pong"
version = "0.1.0"
authors = ["Bailey Townsend"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.21.1"

[profile.dev]
opt-level = 3
debug = true
lto = "fat"


[profile.release]
opt-level = 3
lto = "fat"
debug = true
